--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Tim Kim</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
